Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPPohj6SzUkG6ahYh2Kmm0s",
+      "authorship_tag": "ABX9TyOo/ZhCITrgwDqALvv5uhpX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9396,15 +9396,6 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "tSlW3WM5jCuR"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# W - 2.06.計算量\n",
@@ -9415,10 +9406,9 @@
         "# 計算ステップ数とは、四則演算や数値の比較などの回数\n",
         "# 計算量の例\n",
         "# 次のプログラムは1からNまでの総和(1+2+3+⋯+N)を計算するものです。\n",
-        "/*\n",
+        "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        " \n",
+        "using namespace std; \n",
         "int main() {\n",
         "  int N;\n",
         "  cin >> N;\n",
@@ -9427,8 +9417,52 @@
         "    sum += i;\n",
         "  }\n",
         "  cout << sum << endl;\n",
-        "}\n",
-        "*/\n",
+        "}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uzwJqE4LmeuD",
+        "outputId": "b56429e7-2ee4-42c8-fcc2-f106cd9091c8"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 10 |./temp "
+      ],
+      "metadata": {
+        "id": "CFV4N-2Ez_Kh",
+        "outputId": "c9306334-261d-471e-f449-e12c95f50c71",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "55\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# このプログラムではfor文でN回の繰り返し処理を行っているので、\n",
         "# 計算ステップ数は入力のNに応じて変わります。 N回の繰り返しを行うので、\n",
         "# 計算ステップ数はおおよそN回になります。 \n",
@@ -9436,41 +9470,27 @@
         "# このプログラムで使用している変数は入力のNに関わらずint Nとint sumとint iの3つです。 \n",
         "# このときの空間計算量はオーダー記法を用いてO(1)と表します。\n",
         "# オーダー記法\n",
-        "# 3N^2+7N+4という式はオーダー記法ではO(N^2)と表されます。\n",
+        "# 3N^2+7N+4という式はオーダー記法では O(N^2) と表されます。\n",
         "# 以下の手順によってオーダー記法による表記を得ることができます。\n",
         "# ステップ1：係数を省略する。ただし定数については1とする。\n",
         "# ステップ2：Nを大きくしたときに一番影響が大きい項を取り出し、O(項)と書く\n",
         "# 次の式をそれぞれオーダー記法で表してください。\n",
         "\n",
-        "N+100\n",
-        "10N+N \n",
-        "3\n",
-        " \n",
-        "3+5\n",
-        "2 \n",
-        "N\n",
-        " +N \n",
-        "2\n",
-        " \n",
-        "補足：2 \n",
-        "N\n",
-        " = \n",
-        "N個\n",
-        "2×2×⋯×2\n",
-        "​\n",
-        " \n",
-        "​\n",
-        " \n",
+        "# 1. N+100\n",
+        "# 2. 10N+N^3\n",
+        "# 3. 3+5\n",
+        "# 4. 2^N+N^2\n",
         "\n",
-        "答え\n",
+        "# 答え\n",
+        "# 1. O(N)\n",
+        "# 2. O(N^3)\n",
+        "# 3. O(1)\n",
+        "# 4. O(2^N)\n",
         "\n",
-        "クリックで答えを開く\n",
-        "計算量(オーダー記法)の求め方\n",
-        "計算量を求めるには計算ステップ数がどうなるかを式で表す必要があります。\n",
-        "\n",
-        "次のプログラムは意味の無いものですが、計算量がどうなるかを考えてみましょう。\n",
-        "\n",
-        "Copy\n",
+        "# 計算量(オーダー記法)の求め方\n",
+        "# 計算量を求めるには計算ステップ数がどうなるかを式で表す必要があります。\n",
+        "# 次のプログラムは意味の無いものですが、計算量がどうなるかを考えてみましょう。\n",
+        "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         " \n",
@@ -9495,51 +9515,60 @@
         "  }\n",
         " \n",
         "  cout << sum << endl;\n",
-        "}\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "\n",
-        "int main() {\n",
-        "  int N;\n",
-        "  cin >> N;\n",
-        "\n",
-        "  int sum = 0;\n",
-        "\n",
-        "  for (int i = 0; i < N; i++) {\n",
-        "    for (int j = 0; j < N; j++) {\n",
-        "      sum += i * j;\n",
-        "    }\n",
-        "  }\n",
-        "\n",
-        "  for (int i = 0; i < N; i++) {\n",
-        "    sum += i;\n",
-        "  }\n",
-        "\n",
-        "  for (int i = 0; i < N; i++) {\n",
-        "    sum *= i;\n",
-        "  }\n",
-        "\n",
-        "  cout << sum << endl;\n",
-        "}\n",
-        "1つの2重ループと2つの1重ループがあるので計算ステップ数はN \n",
-        "2\n",
-        " +2Nくらいになります。 これをオーダー記法で表すとO(N \n",
-        "2\n",
-        " )となります。 よってこのプログラムの時間計算量はO(N \n",
-        "2\n",
-        " )です。\n",
-        "\n",
-        "このように、 簡単なアルゴリズムであれば厳密な式を求めなくても 「N回の繰り返し処理があるからO(N)」や「0からNまで回す2重ループがあるからO(N \n",
-        "2\n",
-        " )」 などと見積もることができます。\n",
-        "\n",
-        "例\n",
-        "いくつかの計算量オーダーについて、具体的なプログラムの例を挙げます。\n",
-        "\n",
-        "O(1)\n",
-        "次のプログラムは、1からNまでの総和を公式を使って計算するものです。 このプログラムの計算量はO(1)です。\n",
-        "\n",
-        "Copy\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "QpH15Mw6z9L5",
+        "outputId": "70247d2b-343f-4b18-db1e-4692470b5860",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 10 |./temp "
+      ],
+      "metadata": {
+        "id": "ge5kNqKs10HL",
+        "outputId": "5daf8976-9d75-465b-958e-59dc2344585c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1つの2重ループと2つの1重ループがあるので計算ステップ数は N^2+2N くらいになります。 \n",
+        "# これをオーダー記法で表すと O(N^2) となります。 \n",
+        "# このように、 簡単なアルゴリズムであれば厳密な式を求めなくても 「N回の繰り返し処理があるからO(N)」\n",
+        "# や「0からNまで回す2重ループがあるからO(N^2)」 などと見積もることができます。\n",
+        "# いくつかの計算量オーダーについて、具体的なプログラムの例を挙げます。\n",
+        "# O(1)\n",
+        "# 次のプログラムは、1からNまでの総和を公式を使って計算するものです。 このプログラムの計算量はO(1)です。\n",
+        "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         " \n",
@@ -9548,24 +9577,56 @@
         "  cin >> N;\n",
         "  int sum = N * (N + 1) / 2;\n",
         "  cout << sum << endl;\n",
-        "}\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "\n",
-        "int main() {\n",
-        "  int N;\n",
-        "  cin >> N;\n",
-        "  int sum = N * (N + 1) / 2;\n",
-        "  cout << sum << endl;\n",
-        "}\n",
-        "入力\n",
-        "10\n",
-        "実行結果\n",
-        "55\n",
-        "O(N)\n",
-        "次のプログラムは要素数Nの配列の中に含まれる偶数の個数を数えるものです。 このプログラムの計算量はO(N)です。\n",
-        "\n",
-        "Copy\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "xJr9-AwN1OjJ",
+        "outputId": "b98221e4-99e3-434b-9fed-0d58860a790a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 10 |./temp "
+      ],
+      "metadata": {
+        "id": "-k73aXbO1wTk",
+        "outputId": "d3305fa9-ec41-4b02-9013-9ddd5dccdc9f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "55\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# O(N)\n",
+        "# 次のプログラムは要素数Nの配列の中に含まれる偶数の個数を数えるものです。 \n",
+        "# このプログラムの計算量はO(N)です。\n",
+        "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         " \n",
@@ -9584,39 +9645,65 @@
         "    }\n",
         "  }\n",
         "  cout << cnt << endl;\n",
-        "}\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "\n",
-        "int main() {\n",
-        "  int N;\n",
-        "  cin >> N;\n",
-        "  vector<int> a(N);\n",
-        "  for (int i = 0; i < N; i++) {\n",
-        "    cin >> a.at(i);\n",
-        "  }\n",
-        "\n",
-        "  int cnt = 0;\n",
-        "  for (int i = 0; i < N; i++) {\n",
-        "    if (a.at(i) % 2 == 0) {\n",
-        "      cnt++;\n",
-        "    }\n",
-        "  }\n",
-        "  cout << cnt << endl;\n",
-        "}\n",
-        "入力\n",
-        "5\n",
-        "1 4 2 5 9\n",
-        "実行結果\n",
-        "2\n",
-        "O(N \n",
-        "2\n",
-        " )\n",
-        "次のプログラムは九九の要領でN×Nマスを埋めるものです。 このプログラムの計算量はO(N \n",
-        "2\n",
-        " )です。\n",
-        "\n",
-        "Copy\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "FaNsF_qt1vGz",
+        "outputId": "47d4b6de-1f31-4639-cb1a-08e85d38c2b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 10 0 1 2 3 4 5 6 7 8 9|./temp "
+      ],
+      "metadata": {
+        "id": "rli32Zfj2HJE",
+        "outputId": "0cce6ca6-7fe0-4c82-f5f4-d17ec4237891",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "sNTwUUjH2TLk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "O(N^2)\n",
+        "次のプログラムは九九の要領でN×Nマスを埋めるものです。 \n",
+        "このプログラムの計算量はO(N^2)です。\n",
+        "%%writefile temp.coo\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         " \n",
@@ -9643,34 +9730,18 @@
         "      }\n",
         "    }\n",
         "  }\n",
-        "}\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "Vz2lOt7f2FkJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
-        "int main() {\n",
-        "  int N;\n",
-        "  cin >> N;\n",
-        "\n",
-        "  vector<vector<int>> table(N, vector<int>(N));\n",
-        "  for (int i = 0; i < N; i++) {\n",
-        "    for (int j = 0; j < N; j++) {\n",
-        "      table.at(i).at(j) = (i + 1) * (j + 1);  // N×N回実行される\n",
-        "    }\n",
-        "  }\n",
-        "\n",
-        "  // 出力\n",
-        "  for (int i = 0; i < N; i++) {\n",
-        "    for (int j = 0; j < N; j++) {\n",
-        "      cout << table.at(i).at(j);\n",
-        "      if (j != N - 1) {\n",
-        "        cout << \" \";\n",
-        "      }\n",
-        "      else {\n",
-        "        cout << endl;\n",
-        "      }\n",
-        "    }\n",
-        "  }\n",
-        "}\n",
         "入力\n",
         "9\n",
         "実行結果\n",
@@ -9900,7 +9971,7 @@
         " ページトップ"
       ],
       "metadata": {
-        "id": "uzwJqE4LmeuD"
+        "id": "ZA-nbfAs2pzL"
       },
       "execution_count": null,
       "outputs": []
