Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOo/ZhCITrgwDqALvv5uhpX",
+      "authorship_tag": "ABX9TyMFaVWWwBJnw3Gl7/pELH08",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8384,7 +8384,7 @@
         },
         "outputId": "24b6da3b-4552-4884-b55a-702d4aef9b4c"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8510,7 +8510,7 @@
         "id": "-qv1pxmF7e6O",
         "outputId": "24719e76-dc79-4727-8e3d-fa115cc730e8"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8538,7 +8538,7 @@
         "id": "22lPNWE49vVT",
         "outputId": "0280d20e-a25c-4b50-aa72-42aeb0150654"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8629,7 +8629,7 @@
         "id": "jGIpWJ3x_M0d",
         "outputId": "66ad7be8-b1f3-4871-8d7d-b1f2f10643ca"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8661,7 +8661,7 @@
         "id": "dLuO0RG3_MsH",
         "outputId": "cdd70c94-6491-406a-a9b1-3b501d0fb050"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8738,7 +8738,7 @@
         "id": "A0KYyNRIEjIP",
         "outputId": "9cf313ec-00c0-4642-b3b4-3ad9c130468a"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8762,7 +8762,7 @@
         "id": "vX02fVezEjAV",
         "outputId": "cab60f68-96ed-4da3-d858-049557313f5d"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8830,7 +8830,7 @@
         "id": "XW5cTwa4I69f",
         "outputId": "8bb3681e-22fb-4404-9add-cd5add6a0d32"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8855,7 +8855,7 @@
         "id": "Ovb4sLubI62o",
         "outputId": "593af8d9-080c-4e59-e89c-070ae3df495f"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8992,7 +8992,7 @@
         "id": "X_k1O67GMr5U",
         "outputId": "91dcfcb7-07de-4c38-a7b9-594aa1437bee"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9259,7 +9259,7 @@
         "id": "Qf54pLj9bo_A",
         "outputId": "c9d2852f-e586-4761-db49-06489d81319a"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9289,7 +9289,7 @@
         "id": "WBFI_SpMMq3B",
         "outputId": "5e8edfc0-4456-47cb-cfeb-d931395d6aff"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9426,7 +9426,7 @@
         "id": "uzwJqE4LmeuD",
         "outputId": "b56429e7-2ee4-42c8-fcc2-f106cd9091c8"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9449,7 +9449,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9524,7 +9524,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9547,7 +9547,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9586,7 +9586,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9609,7 +9609,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9654,7 +9654,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9677,7 +9677,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9700,10 +9700,10 @@
     {
       "cell_type": "code",
       "source": [
-        "O(N^2)\n",
-        "次のプログラムは九九の要領でN×Nマスを埋めるものです。 \n",
-        "このプログラムの計算量はO(N^2)です。\n",
-        "%%writefile temp.coo\n",
+        "# O(N^2)\n",
+        "# 次のプログラムは九九の要領でN×Nマスを埋めるものです。 \n",
+        "# このプログラムの計算量はO(N^2)です。\n",
+        "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         " \n",
@@ -9733,67 +9733,70 @@
         "}"
       ],
       "metadata": {
-        "id": "Vz2lOt7f2FkJ"
+        "id": "Vz2lOt7f2FkJ",
+        "outputId": "92dcd15c-cc91-402d-fc01-1b5e573f2556",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "入力\n",
-        "9\n",
-        "実行結果\n",
-        "1 2 3 4 5 6 7 8 9\n",
-        "2 4 6 8 10 12 14 16 18\n",
-        "3 6 9 12 15 18 21 24 27\n",
-        "4 8 12 16 20 24 28 32 36\n",
-        "5 10 15 20 25 30 35 40 45\n",
-        "6 12 18 24 30 36 42 48 54\n",
-        "7 14 21 28 35 42 49 56 63\n",
-        "8 16 24 32 40 48 56 64 72\n",
-        "9 18 27 36 45 54 63 72 81\n",
-        "N×N要素の二次元配列を使っているので空間計算量もO(N \n",
-        "2\n",
-        " )となります。\n",
-        "\n",
-        "O(logN)\n",
-        "初めに簡単にlogを説明します。\n",
-        "\n",
-        "log \n",
-        "x\n",
-        "​\n",
-        " Nという式は「xを何乗したらNになるか」を表します。 例えば、2 \n",
-        "4\n",
-        " =16なので、log \n",
-        "2\n",
-        "​\n",
-        " 16=4です。\n",
-        "\n",
-        "次の図を見てください。長さ8の棒を長さが1になるまで半分に切る(2で割る)ことを繰り返したときに切る回数はlog \n",
-        "2\n",
-        "​\n",
-        " 8回です。\n",
-        "\n",
-        "\n",
-        "\n",
-        "このように計算量に出てくるlogは「半分にする回数」を表すことが多いです。\n",
-        "\n",
-        "logNはNに対して非常に小さくなるので、計算量の中にO(logN)が出てきた場合でも実行時間にそこまで影響しないことが多いです。 具体的な値が知りたい場合は、Google検索で「log_2 値」のように検索することで確認できます。\n",
-        "\n",
-        "補足：厳密な定義は高校数学の範囲なので詳しく知りたい人は別で勉強してください。\n",
-        "また、オーダー記法ではlogの底は省略して書かれることが多いです。この場合は2が省略されていると考えましょう。\n",
-        "実はlogの底の違いは定数倍の違いだけとみなすことができるので、係数を省略するオーダー記法では省略されます。\n",
-        "\n",
-        "次のプログラムはNが2で何回割れるかを数えるものです。 このプログラムの計算量はO(logN)です。\n",
-        "\n",
-        "上に挙げたイメージと同じような処理を行うプログラムなので、ループする回数が大体log \n",
-        "2\n",
-        "​\n",
-        " N回になることが分かります。\n",
-        "\n",
-        "Copy\n",
+        "!g++ temp.cpp -o temp; echo 9 |./temp "
+      ],
+      "metadata": {
+        "id": "0yMWW5f2GiVx",
+        "outputId": "423e9f86-0840-449d-b385-447522b7f35c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 2 3 4 5 6 7 8 9\n",
+            "2 4 6 8 10 12 14 16 18\n",
+            "3 6 9 12 15 18 21 24 27\n",
+            "4 8 12 16 20 24 28 32 36\n",
+            "5 10 15 20 25 30 35 40 45\n",
+            "6 12 18 24 30 36 42 48 54\n",
+            "7 14 21 28 35 42 49 56 63\n",
+            "8 16 24 32 40 48 56 64 72\n",
+            "9 18 27 36 45 54 63 72 81\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# O(logN)\n",
+        "# 初めに簡単にlogを説明します。\n",
+        "# log_x N という式は「xを何乗したらNになるか」を表します。 \n",
+        "# 例えば、2^4=16 なので、log_2 16=4 です。\n",
+        "# 長さ8の棒を長さが1になるまで半分に切る(2で割る)ことを繰り返したときに切る回数は log_2 8 回です。\n",
+        "# 計算量に出てくる log は「半分にする回数」を表す事が多い。\n",
+        "# log N は N に対して非常に小さくなるので、計算量の中に O(logN) が出てきた場合でも実行時間に\n",
+        "# そこまで影響しないことが多い。 \n",
+        "# また、オーダー記法では log の底は省略して書かれる。この場合は2が省略されている。\n",
+        "# 実は log の底の違いは定数倍の違いだけとみなすことができるので、係数を省略するオーダー記法では省略されます。\n",
+        "# 次のプログラムは N が 2 で何回割れるかを数えるものです。 \n",
+        "# このプログラムの計算量はO(logN)です。\n",
+        "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         " \n",
@@ -9806,7 +9809,63 @@
         "    N /= 2;\n",
         "  }\n",
         "  cout << cnt << endl;\n",
-        "}\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "ZA-nbfAs2pzL",
+        "outputId": "49b1a7d8-1ac3-427d-863d-7ff5b6b221ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo  |./temp "
+      ],
+      "metadata": {
+        "id": "UNjwI8gEIWn0",
+        "outputId": "42736446-7b74-4aae-eaaf-0d5e408430ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "xCAtGiw2LYvL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
@@ -9971,7 +10030,7 @@
         " ページトップ"
       ],
       "metadata": {
-        "id": "ZA-nbfAs2pzL"
+        "id": "xpsTmQSOIS04"
       },
       "execution_count": null,
       "outputs": []
