Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMdc9Fg13yT127iNEys24YS",
+      "authorship_tag": "ABX9TyPVuhcproh1ixMRM6MiwsFE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -10347,11 +10347,11 @@
         "!gcc --version"
       ],
       "metadata": {
-        "id": "y4oZ-iHMYfDC",
-        "outputId": "65e4d42d-dafa-4696-9063-bbc2c84b9768",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "y4oZ-iHMYfDC",
+        "outputId": "65e4d42d-dafa-4696-9063-bbc2c84b9768"
       },
       "execution_count": 1,
       "outputs": [
@@ -10397,10 +10397,10 @@
       ],
       "metadata": {
         "id": "92M0Qd_eeMw5",
-        "outputId": "54f21857-3497-4970-e534-c4c8b91cd762",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "54f21857-3497-4970-e534-c4c8b91cd762"
       },
       "execution_count": 3,
       "outputs": [
@@ -10419,11 +10419,11 @@
         "!g++ temp.cpp -o temp; ./temp"
       ],
       "metadata": {
-        "id": "V3Rr_EY-aEaz",
-        "outputId": "11bb646d-4ac6-422b-80ca-27ad2f3d7ac3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "V3Rr_EY-aEaz",
+        "outputId": "11bb646d-4ac6-422b-80ca-27ad2f3d7ac3"
       },
       "execution_count": 4,
       "outputs": [
@@ -10459,11 +10459,11 @@
         "}"
       ],
       "metadata": {
-        "id": "bko7j7ugZ3ip",
-        "outputId": "e3da5c7a-1928-4006-e4ed-30942d7a33bd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bko7j7ugZ3ip",
+        "outputId": "e3da5c7a-1928-4006-e4ed-30942d7a33bd"
       },
       "execution_count": 5,
       "outputs": [
@@ -10482,11 +10482,11 @@
         "!g++ temp.cpp -o temp; ./temp"
       ],
       "metadata": {
-        "id": "YXNlIbXfaazm",
-        "outputId": "1dfbaffe-11ac-4167-ff06-b169f0919560",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YXNlIbXfaazm",
+        "outputId": "1dfbaffe-11ac-4167-ff06-b169f0919560"
       },
       "execution_count": 6,
       "outputs": [
@@ -10519,11 +10519,11 @@
         "}"
       ],
       "metadata": {
-        "id": "b0j4IjgUaZVZ",
-        "outputId": "83f27b4e-9d42-4042-a1be-27c656dfd93e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "b0j4IjgUaZVZ",
+        "outputId": "83f27b4e-9d42-4042-a1be-27c656dfd93e"
       },
       "execution_count": 7,
       "outputs": [
@@ -10571,11 +10571,11 @@
         "}"
       ],
       "metadata": {
-        "id": "BtvJlQ4Qa2xg",
-        "outputId": "4454b36c-3845-4cd6-fffe-fcde2a3594ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BtvJlQ4Qa2xg",
+        "outputId": "4454b36c-3845-4cd6-fffe-fcde2a3594ff"
       },
       "execution_count": 11,
       "outputs": [
@@ -10594,11 +10594,11 @@
         "!g++ temp.cpp -o temp; ./temp"
       ],
       "metadata": {
-        "id": "QE5QDiRzbO9K",
-        "outputId": "3d940243-9407-49f1-dbf5-dabb6e32246c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QE5QDiRzbO9K",
+        "outputId": "3d940243-9407-49f1-dbf5-dabb6e32246c"
       },
       "execution_count": 12,
       "outputs": [
@@ -10637,11 +10637,11 @@
         "}"
       ],
       "metadata": {
-        "id": "IgsgpytPbN8q",
-        "outputId": "230832c0-4c76-4837-f591-31bf75214193",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IgsgpytPbN8q",
+        "outputId": "230832c0-4c76-4837-f591-31bf75214193"
       },
       "execution_count": 13,
       "outputs": [
@@ -10669,11 +10669,11 @@
         "!g++ temp.cpp -o temp; ./temp"
       ],
       "metadata": {
-        "id": "OQ24B4_ibtd-",
-        "outputId": "d6e8d3c3-5254-4c26-c857-e3c83e943a94",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OQ24B4_ibtd-",
+        "outputId": "d6e8d3c3-5254-4c26-c857-e3c83e943a94"
       },
       "execution_count": 14,
       "outputs": [
@@ -10704,12 +10704,12 @@
         "</table>"
       ],
       "metadata": {
-        "id": "i_MpZpvdnS6O",
-        "outputId": "1ca5877b-92e0-47af-ea33-9281530042a2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 115
-        }
+        },
+        "id": "i_MpZpvdnS6O",
+        "outputId": "1ca5877b-92e0-47af-ea33-9281530042a2"
       },
       "execution_count": 15,
       "outputs": [
@@ -10773,11 +10773,11 @@
         "}"
       ],
       "metadata": {
-        "id": "-7sy0SRjoL1V",
-        "outputId": "623246ea-3459-487b-8816-84251231daf3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-7sy0SRjoL1V",
+        "outputId": "623246ea-3459-487b-8816-84251231daf3"
       },
       "execution_count": 16,
       "outputs": [
@@ -10796,11 +10796,11 @@
         "!g++ temp.cpp -o temp; ./temp"
       ],
       "metadata": {
-        "id": "NYI8qqG0pV4-",
-        "outputId": "3a97e588-6ae4-4f8e-cd0f-ffe927571949",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NYI8qqG0pV4-",
+        "outputId": "3a97e588-6ae4-4f8e-cd0f-ffe927571949"
       },
       "execution_count": 17,
       "outputs": [
@@ -10820,7 +10820,7 @@
       "cell_type": "code",
       "source": [
         "# キャストが行えない場合はコンパイルエラーとなります。\n",
-        "\n",
+        "%%writefile temp.cpp\n",
         "Copy\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -10837,7 +10837,30 @@
         "}"
       ],
       "metadata": {
-        "id": "YxZ2gnrOouBZ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YxZ2gnrOouBZ",
+        "outputId": "6505b9b8-cecd-499d-ea83-05afd008a641"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# !g++ temp.cpp -o temp; ./temp #=> エラーになるのでとりあえずコメントアウト"
+      ],
+      "metadata": {
+        "id": "uRbF-AqYtZlV"
       },
       "execution_count": null,
       "outputs": []
